Fixes #189: Added in styling and pop up for go button: disable form submission if any visible waypoints, or the start cord or the end cord are unfilled

--- a/frontend/src/components/GoButton/GoButton.css
+++ b/frontend/src/components/GoButton/GoButton.css
@@ -1,4 +1,3 @@
-
 .go_button {
     background-color: #198754;
     color: rgb(224, 221, 221);
@@ -10,10 +9,12 @@
     border-radius: 5px;
     transition: background-color 0.3s ease-in-out;
 }
-  
+
 .go_button:hover {
     background-color: #31b678;
 }
-  
-  
-  
+
+.go_button.disabled {
+    background-color: #6c757d;
+    cursor: not-allowed;
+}
